# Graphics-Course

./: README.md  TheoreticalTasks.ipynb
.ipynb_checkpoints/: TheoreticalTasks-checkpoint.ipynb
FinalProject/: CMakeLists.txt
FinalProject/project/: CMakeLists.txt  bone.hpp  default_object.hpp  doggo.hpp  game_manager.hpp  ground.hpp  heart.hpp  light.hpp  main.cpp  sky.hpp  text_manager.hpp
FinalProject/project/shaders/: TextFragmentShader.glsl
FinalProject/project/texture_files/: bone_texture.dds  doggo_texture.dds
FinalProject/support/: controls.cpp  controls.hpp  gl_manager.cpp  gl_manager.hpp  objloader.cpp  objloader.hpp  shader_loader.cpp  shader_loader.hpp  text2D.cpp  text2D.hpp  texture_loader.cpp  texture_loader.hpp
task_1_two_triangles/: README.md  SimpleVertexShader.vertexshader  src.cpp
task_1_two_triangles/common/: loadShader.cpp
task_1_two_triangles/home_task_1/: task_1.cpp
task_2_camera_rotation/home_task_2/: SimpleFragmentShaderTriangle_1.fragmentshader  SimpleFragmentShaderTriangle_2.fragmentshader  SimpleVertexShader.vertexshader  home_task_2  task_2.cpp
task_3_3D_objects/home_task_3/: SimpleFragmentShader_1.fragmentshader  SimpleFragmentShader_2.fragmentshader  home_task_3  task_3.cpp
